--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script>
         function Download() {
-            window.open('https://github.com/UimarkkuGames/Launcher/releases/download/Test/RealInstaller.exe.txt', '_blank');
+            window.open('Google.com', '_blank');
         }
 
         function ChangePage() {
