--- a/MoreInfo.html
+++ b/MoreInfo.html
@@ -12,7 +12,7 @@
     <script>
         function ChangePage() {
             // Redirect to Index.html
-            window.location.href = "Index.html";
+            window.location.href = "index.html";
         }
     </script>
 
