--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script>
         function Download() {
-            window.open('https://www.google.com/', '_blank');
+            window.open('https://sites.google.com/view/uimarkkugames', '_blank');
         }
 
         function ChangePage() {
