--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script>
         function Download() {
-            window.open('https://sites.google.com/view/uimarkkugames', '_blank');
+            window.open('https://github.com/UimarkkuGames/Launcher-Plus/releases/download/test/test1.md', '_blank');
         }
 
         function ChangePage() {
